--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USER=agrios
-DB_PASSWORD=postgres123
-DB_NAME=userdb
-GRPC_PORT=50051
+DB_PASSWORD=agrios123
+DB_NAME=agrios_users
+
+DB_MAX_CONNS=10
+DB_MIN_CONNS=2
+DB_MAX_CONN_LIFETIME=1h
+DB_MAX_CONN_IDLE_TIME=30m
+DB_CONNECT_TIMEOUT=5s
