--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ DB_MIN_CONNS=2
 DB_MAX_CONN_LIFETIME=1h
 DB_MAX_CONN_IDLE_TIME=30m
 DB_CONNECT_TIMEOUT=5s
+
+JWT_SECRET=JCnk0Rlhh23uuDAunpeDtW2uHUqKF//jNBwNDM0KxtE=
