feat: Integrate Redis for token management and add blacklist functionality

--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ DB_MAX_CONN_IDLE_TIME=30m
 DB_CONNECT_TIMEOUT=5s
 
 JWT_SECRET=JCnk0Rlhh23uuDAunpeDtW2uHUqKF//jNBwNDM0KxtE=
+
+REDIS_ADDR=localhost:6379
+REDIS_PASSWORD=
+REDIS_DB=0
