--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_USER=agrios
-DB_PASSWORD=agrios123
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_NAME=agrios_users
 
 DB_MAX_CONNS=10
@@ -11,6 +11,8 @@ DB_MAX_CONN_IDLE_TIME=30m
 DB_CONNECT_TIMEOUT=5s
 
 JWT_SECRET=JCnk0Rlhh23uuDAunpeDtW2uHUqKF//jNBwNDM0KxtE=
+ACCESS_TOKEN_DURATION=15m
+REFRESH_TOKEN_DURATION=168h
 
 REDIS_ADDR=localhost:6379
 REDIS_PASSWORD=
